# django-cloudrun

./: .env  .gitignore  .vars  Dockerfile  Makefile  cloudmigrate.yaml  deploy.sh  manage.py  pyproject.toml  requirements.txt  setup.sh
django_cloudrun/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
django_cloudrun/migrations/: 0001_createsuperuser.py
